src/App.css
/* selectable-items-list */
.movie-container__selectable-items-list.ui {
    white-space: nowrap;
    overflow: auto;
    margin: 30px 0;
    display: flex;
    justify-content: center;
}

.cursor-pointer.item {
    cursor: pointer;
}

/* movie-search-bar */
.movie-container__movies-search-bar {
    max-width: 500px;
    margin: auto;
}

.movie-container .search {
    flex-grow: 1;
}

.movie-container .input {
    width: 100%;
}

.movie-container .search {
    display: flex;
    flex-direction: column;
}

.movie-container .ui.button, .movie-container .ui input {
    border-radius: 500rem;
}

/* movie-card */
.ui.card.m-auto {
    margin: auto;
} 

/* util */
.d-flex {
    display: flex;
}

.text-center {
    text-align: center;
}

